Fix carousel control width on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -739,7 +739,7 @@ a.mfhomepage-card:focus {
 	margin: 5px 5px 0 5px;
 
 	.carousel-control {
-		width: 84%;
+		width: 85%;
 		height: auto;
 		bottom: auto;
 		font-size: 1.05em;
